<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37ffffff">

    <TextView
        android:id="@+id/res_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <ProgressBar
        android:id="@+id/registration_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/next_btn_registration"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:text="@string/action_sign_in_next"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/login_form_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/next_btn_registration">

        <LinearLayout
            android:id="@+id/regestration_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/input_name"
                    android:maxLines="1"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="18sp"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/input_last_name"
                    android:maxLines="1"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="18sp"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/input_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="18sp"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/input_phone"
                    android:inputType="phone"

                    android:maxLines="1"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"

                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/input_password2"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="18sp"

                    />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                android:id="@+id/radio_group">

                <RadioButton
                    android:id="@+id/radio_men_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Only men's hairstyle" />

                <RadioButton
                    android:id="@+id/radio_women_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="Only women's  hairstyle" />

                <RadioButton
                    android:id="@+id/radio_all_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="All kinds of haircuts" />
            </RadioGroup>


            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/lang"
                android:spinnerMode="dropdown"
                 />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

</RelativeLayout>